--- a/style.scss
+++ b/style.scss
@@ -42,11 +42,20 @@
   padding: 48px 48px 78px;
   .text-box {
     text-align: center;
-    span {
-      color: #53ffaa;
-      font-size: 13px;
-      line-height: 18px;
-      letter-spacing: 4px;
+    .number {
+      max-width: 122px;
+      width: 100%;
+      display: inline-block;
+      p {
+        width: 100%;
+        color: #53ffaa;
+        font-size: 13px;
+        line-height: 18px;
+        letter-spacing: 4px;
+      }
+      span {
+        width: 100%;
+      }
     }
     .quotes-box {
       max-width: 444px;
@@ -86,5 +95,22 @@
   cursor: pointer;
   &:hover {
     box-shadow: 0px 0px 40px #53ffaa;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .advice-box {
+    max-width: 343px;
+  }
+  .number {
+    font-size: 11px;
+  }
+  .advice-box {
+    .text-box {
+      .quotes-box {
+        .quotes {
+          font-size: 24px;
+        }
+      }
+    }
   }
 }
