--- a/style.scss
+++ b/style.scss
@@ -46,21 +46,21 @@
       max-width: 122px;
       width: 100%;
       display: inline-block;
-      p {
-        width: 100%;
-        color: #53ffaa;
-        font-size: 13px;
-        line-height: 18px;
-        letter-spacing: 4px;
-      }
+      width: 100%;
+      color: #53ffaa;
+      font-size: 13px;
+      line-height: 18px;
+      letter-spacing: 4px;
+      animation: rightInMove 1s ease-out;
       span {
-        width: 100%;
+        display: inline-block;
+        width: 10px;
       }
     }
     .quotes-box {
       max-width: 444px;
       width: 100%;
-      height: 200px;
+      min-height: 200px;
       .quotes {
         width: 100%;
         height: 100%;
@@ -92,11 +92,81 @@
   justify-content: center;
   align-items: center;
   transition: 0.4s;
+
   cursor: pointer;
   &:hover {
     box-shadow: 0px 0px 40px #53ffaa;
   }
 }
+
+.shake-anime {
+  animation: shake 1s;
+  animation-iteration-count: 1;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
+@keyframes rightInMove {
+  0% {
+    transform: translateX(20px);
+    opacity: 0;
+  }
+  80% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes leftInMove {
+  0% {
+    transform: translateX(20px);
+    opacity: 0;
+  }
+  // 80% {
+  //   transform: translateY(-5px);
+  // }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 @media only screen and (max-width: 992px) {
   .advice-box {
     max-width: 343px;
